# gamerecorder

./: README.md  pyproject.toml
gamerecorder/: detect.py  log.py  main.py
