[tool.poetry]
name = "gamerecorder"
version = "0.1.0"
description = ""
authors = ["Oleksandr Dunaievskyi <o_dunaievskyi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psutil = "^6.1.1"
rich = "^13.9.4"
colorlog = "^6.9.0"
xdg-base-dirs = "^6.0.2"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gamerecorder = 'gamerecorder.main:main'